# Loupe

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  justfile  main.py  pyproject.toml
archive/: implementation-plan.md  research-questions.md  rq1-analysis-dimensions.md  rq2-classical-vs-learned.md  rq3-anime-models.md  rq4-aggregate-scoring.md  rq5-tooling-validation.md  rq6-developer-tooling.md
assets/: architecture.d2
config/: default.toml
docs/: analyzers.md  scoring.md
src/loupe/: __init__.py
src/loupe/analyzers/: __init__.py  _color_space.py  base.py  color.py  composition.py  detail.py  lighting.py  style.py  subject.py
src/loupe/cli/: __init__.py  main.py
src/loupe/core/: __init__.py  config.py  engine.py  models.py  scoring.py
src/loupe/io/: __init__.py  image.py  sidecar.py
src/loupe/models/: __init__.py  aesthetic.py  clip.py  detection.py  manager.py  onnx_utils.py  segmentation.py  tagger.py
tests/: conftest.py  test_benchmarks.py  test_integration.py
tests/analyzers/: test_base.py  test_color.py  test_color_space.py  test_composition.py  test_detail.py  test_lighting.py  test_style.py  test_subject.py
tests/cli/: test_main.py
tests/core/: test_config.py  test_engine.py  test_models.py  test_scoring.py
tests/io/: test_image.py  test_sidecar.py
tests/models/: test_aesthetic.py  test_clip.py  test_detection.py  test_manager.py  test_onnx_utils.py  test_segmentation.py  test_tagger.py
